Bug 86346 - libinput-device.c:473: bad if test ?
Summary: libinput-device.c:473: bad if test ?
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: All All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-16 19:12 UTC by dcb314
Modified: 2014-11-27 13:31 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description dcb314 2014-11-16 19:12:14 UTC
src/libinput-device.c:473:35: warning: logical not is only applied to the left hand side of comparison [-Wlogical-not-parentheses]

    if (!seat->keyboard_device_count > 0)
Comment 1 Pekka Paalanen 2014-11-27 13:31:17 UTC
commit d621df2dee522d9768a8aff1dd200f3595e29c65
Author: Derek Foreman <derekf@osg.samsung.com>
Date:   Wed Nov 19 11:04:12 2014 -0600

    input: Use slightly less obscure logic in evdev_notify_keyboard_focus()

Marking as fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.